# 8051

./: CMakeLists.txt  README.md  toolchain.cmake
helloword/: CMakeLists.txt  toolchain-sdcc.cmake
helloword/src/: main.c
include/: C8051F580.h  FreeRTOSConfig.h
led-blink/: CMakeLists.txt
led-blink-FreeRtos/: CMakeLists.txt
led-blink/src/: main.c
ledBlink/: CMakeLists.txt  main.c  toolchain-sdcc.cmake
ledBlinkFreeRTOS/: CMakeLists.txt  main.c
spi/: CMakeLists.txt  main.c
tests/helloword/: toolchain-sdcc.cmake
tests/led-blink/: CMakeLists.txt
tests/led-blink-FreeRtos/: CMakeLists.txt
tests/led-blink-FreeRtos/FreeRTOS/Demo/Cygnal/: FreeRTOSConfig.h
tests/led-blink-FreeRtos/FreeRTOS/Demo/Cygnal/serial/: serial.c
tests/led-blink-FreeRtos/FreeRTOS/Source/portable/SDCC/Cygnal/: portmacro.h
tests/led-blink-FreeRtos/src/: main.c
tests/led-blink/src/: .main.c.swp  main.c
tests/sdk/: CMakeLists.txt
tests/sdk/include/: portIO.h  spi.h  sys.h
tests/sdk/src/: main.c  portIO.c  portIO.h  spi.c  spi.h  sys.c  sys.h
